src/hrflow_connectors/core/jsonmap/grammar.txt
jsonmap             : expr
                    : IF DOT_ACCESS COLON expr

expr                : atom
                    : L_BRAKET (expr (COMMA expr)*)? R_BRAKET
                    : L_CURLY (RAW_STRING COLON expr)* R_CURLY

atom                : literal
                    : dot_access
                    : dot_access PASS_CONTEXT consumer
                    : IF DOT_ACCESS COLON atom

literal             : TRUE|FALSE|NULL|NUMBER|RAW_STRING|QUOTED_RAW_STRING|UTCNOW

dot_access          : DOT_ACCESS (INDEX_ACCESS DOT_ACCESS?)* ((ACCESS_CATCH|FALSY) expr)?

consumer            : expr
                    : function_call

function_call       : float_call
                    : concat_call
                    : split_call (PASS_CONTEXT consumer)?
                    : map_call (PASS_CONTEXT consumer)?
                    : jsonload_call
                    : join_call
                    : string_call

float_call          : FLOAT_FN
split_call          : SPLIT_FN L_PAREN RAW_STRING|QUOTED_RAW_STRING R_PAREN
map_call            : MAP_FN L_PAREN expr R_PAREN
concat_call         : CONCAT_FN L_PAREN dot_access|RAW_STRING|QUOTED_RAW_STRING (COMMA dot_access|RAW_STRING|QUOTED_RAW_STRING)* R_PAREN
jsonload_call       : JSONLOAD_FN
join_call           : JOIN_FN L_PAREN RAW_STRING|QUOTED_RAW_STRING R_PAREN
string_call         : STRING_FN
